# MBSE_Benchmark

./: .gitignore  INSTALL.md  README.md  package-lock.json  pyproject.toml  requirements.txt
config/: benchmark.json
data/tasks/sample-task/: evaluators.py
data/tasks/sysml-advanced-merge-001/: evaluators.py
data/tasks/sysml-advanced-patterns-001/: evaluators.py
data/tasks/sysml-advanced-quality-001/: evaluators.py
data/tasks/sysml-analyze-constraints-001/: evaluators.py
data/tasks/sysml-analyze-crossref-001/: evaluators.py
data/tasks/sysml-analyze-dependencies-001/: evaluators.py
data/tasks/sysml-analyze-flow-001/: evaluators.py
data/tasks/sysml-analyze-individuals-001/: evaluators.py
data/tasks/sysml-analyze-specialization-001/: evaluators.py
data/tasks/sysml-analyze-topology-001/: evaluators.py
data/tasks/sysml-analyze-variations-001/: evaluators.py
data/tasks/sysml-constraint-syntax-001/: evaluators.py
data/tasks/sysml-extract-actions-001/: evaluators.py
data/tasks/sysml-extract-connections-001/: evaluators.py
data/tasks/sysml-extract-hierarchy-001/: evaluators.py
data/tasks/sysml-extract-interfaces-001/: evaluators.py
docs/: eval-discovery.md
mbse_bench/: __init__.py  __main__.py  evaluation.py  filesystem.py  models.py  py.typed  results.py  runner.py  tasks.py  tools.py
src/: evaluation.py  filesystem.py  models.py  runner.py  tasks.py  tools.py
src/sysml_parser/: README.md  __init__.py  ast_nodes.py  extractor.py  lexer.py  parser.py  test_parser.py  validator.py
src/sysmlv2_parser/: ast.py  lexer.py  parser.py
(+36 files in other folders)
