[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mbse-bench"
version = "0.1.0"
description = "A benchmarking framework for evaluating AI models on Model-Based Systems Engineering tasks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MBSE Bench Contributors"}
]
keywords = ["benchmark", "mbse", "sysml", "systems-engineering", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/your-org/MBSE_Benchmark"
Repository = "https://github.com/your-org/MBSE_Benchmark"
Documentation = "https://github.com/your-org/MBSE_Benchmark/blob/main/README.md"

[tool.setuptools]
packages = ["mbse_bench"]

[tool.setuptools.package-data]
mbse_bench = ["py.typed"]
